fix: html, favicon 예외 처리